# INF339

./: Times.txt  works.txt
bCast/: CMakeLists.txt  bcast.cpp
bCast/jobs/: jobscript_N1_1  jobscript_N1_16  jobscript_N1_2  jobscript_N1_4  jobscript_N1_8  jobscript_N2_1  jobscript_N4_1  jobscript_N8_1  jobscript_N8_16  jobscript_N8_2  jobscript_N8_4  jobscript_N8_8
linear_vector/: CMakeLists.txt  jobscript  linear_MVM.cpp
matrix_verctor/: Bcast_test.cc  CMakeLists.txt  a.out  jobscript  linear_MVM.cpp  matrix-vector_CB.cc  matrix-vector_RB.cc  matrix_vector_RB.cpp  send_jobs.sh
matrix_verctor/jobs/: jobscript_N1_1  jobscript_N1_16  jobscript_N1_2  jobscript_N1_4  jobscript_N1_8  jobscript_N2_1  jobscript_N2_16  jobscript_N4_16  jobscript_N8_1  jobscript_N8_16  jobscript_N8_2  jobscript_N8_4  jobscript_N8_8
matrix_verctor/total_time/: matrix_vector_RB_total.cpp
mpi programs/: a.out  band.c  com.c  hello.c  ring.c  task2.c  task2cpp.cc
results/1/: 1-1-s16.9175.out  1-1-s16.9177.out  1-1-s16.9178.out  1-s16.9157.out  16-s16.9162.out  2-2-s16.9179.out  2-2-s16.9180.out  2-2-s16.9181.out  2-s16.9159.out  3-4-s16.9182.out  3-4-s16.9183.out  3-4-s16.9184.out  4-8-s16.9185.out  4-8-s16.9186.out  4-8-s16.9187.out  4-s16.9160.out  5-16-s16.9188.out  5-16-s16.9189.out  5-16-s16.9190.out  8-s16.9161.out
results/16/: s16.8841.out  s16.8842.out  s16.8843.out  s16.8844.out  s16.8845.out
results/2/: 1-1-s16.9191.out  1-1-s16.9192.out  1-1-s16.9193.out  5-16-s16.9426.out  5-16-s16.9427.out  (+1 more)
total_time/: CMakeLists.txt  jobscript  matrix_vector_RB_total.cpp
(+79 files in other folders)
